# Deckadence

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: CMake-Ubuntu-x86_64-clang++.yml  CMake-Win64-MSYS2-clang64.yml
Client/include/: GUI.hpp
Server/: NexusShell.sln  NexusShell.vcxproj  NexusShellvcxproj.filters  resource.h
include/: Config.hpp  Header.hpp  Server.hpp  Vec2.hpp  common.hpp
include/Client/: Client.hpp  DiscoveryListenerService.hpp
include/Config/: Config.hpp  Deckastore.hpp  Item.hpp  Profile.hpp
include/GUI/: Button.hpp  DxWindow.hpp  GUI.hpp
include/Server/: DiscoveryService.hpp  Server.hpp
include/Utilities/: FileDialog.hpp  SingleInstanceSocket.hpp
src/: main.cpp
src/Client/: Client.cpp  ClientInit.cpp  DiscoveryListenerService.cpp
src/Config/: Config.cpp  Deckastore.cpp  Item.cpp
src/GUI/: ClientInterface.cpp  CloseWindow.cpp  DxWindow.cpp  MiscCommon.cpp  OOBE.cpp  ResizeWindow.cpp  ServerInterface.cpp
src/Networking/: Server.cpp  init.cpp
src/Server/: CreateSocket.cpp  DiscoveryService.cpp  ServerInit.cpp
src/Utilities/: FileDialog.cpp  SingleInstanceSocket.cpp  filebrowser.cpp
src/config/: Config.cpp
src/gui/: button.cpp  drawer.cpp  error.cpp  font.cpp  init.cpp  style.cpp
src/runtime/: README.md
unused legacy code/: Thumbnail.cpp  Thumbnail.hpp  logger.cpp  uuid.cpp
